<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="30dp"
    tools:context="com.example.admindashboard.loginAndSignUp.SignUpStep3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro_thin"
            android:text="@string/join"
            android:textColor="@color/white"
            android:textSize="64sp"
            android:transitionName="transition_join_tv"/>
        <TextView
            android:id="@+id/tv_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us"
            android:textColor="@color/joinUsBlue"
            android:textSize="64sp"
            android:transitionName="transition_us_tv"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="24sp"
               android:text="@string/select_gender"
               android:layout_marginTop="36dp"
               android:layout_gravity="center"/>
            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:padding="8dp"/>
                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:padding="8dp"/>
                <RadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:padding="8dp"/>
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/blue"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:text="@string/select_dob"
                android:layout_gravity="center"/>
            <DatePicker
                android:id="@+id/dpDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:hapticFeedbackEnabled="true"
                android:theme="@style/MyDatePickerStyle"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="onClickNext"
            android:elevation="5dp"
            android:transitionName="transition_next_button"/>
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/sign_inLog"
            android:onClick="onClickLogin"
            android:elevation="5dp"
            android:transitionName="transition_login_button"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>


</ScrollView>