<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="30dp"
    tools:context="com.example.admindashboard.loginAndSignUp.SignUpStep1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro_thin"
            android:text="@string/join"
            android:textColor="@color/white"
            android:textSize="64sp"
            android:transitionName="transition_join_tv" />
        <TextView
            android:id="@+id/tv_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us"
            android:textColor="@color/joinUsBlue"
            android:textSize="64sp"
            android:transitionName="transition_us_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_branch"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
        <Spinner
            android:id="@+id/branch_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="56dp"
            android:background="@color/white"
            android:drawablePadding="10dp"
            android:entries="@array/branch_spinner"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="onClickNext"
            android:elevation="5dp"
            android:transitionName="transition_next_button"/>
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/sign_inLog"
            android:onClick="onClickLogin"
            android:elevation="5dp"
            android:transitionName="transition_login_button"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>


</ScrollView>