<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="30dp"
    tools:context="com.example.admindashboard.loginAndSignUp.SignUpStep4Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro_thin"
            android:text="@string/join"
            android:textColor="@color/white"
            android:textSize="64sp"
            android:transitionName="transition_join_tv"/>
        <TextView
            android:id="@+id/tv_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us"
            android:textColor="@color/joinUsBlue"
            android:textSize="64sp"
            android:transitionName="transition_us_tv"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="36dp"
                android:textColor="@color/white"
                android:text="@string/enter_phone_number"
                android:layout_gravity="center"/>
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccpNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_arrowColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:ccp_contentColor="@color/white"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                android:hint="@string/phone"
                app:endIconTint="@color/white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/gray"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/joinUsBlue"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:startIconTint="@color/white"
                android:layout_marginBottom="48dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="onClickNext"
            android:elevation="5dp"
            android:transitionName="transition_next_button"/>
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/sign_inLog"
            android:onClick="onClickLogin"
            android:elevation="5dp"
            android:transitionName="transition_login_button"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>


</ScrollView>