<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="30dp"
    tools:context="com.example.admindashboard.loginAndSignUp.SignUpStep2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro_thin"
            android:text="@string/join"
            android:textColor="@color/white"
            android:textSize="64sp"
            android:transitionName="transition_join_tv"/>
        <TextView
            android:id="@+id/tv_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us"
            android:textColor="@color/joinUsBlue"
            android:textSize="64sp"
            android:transitionName="transition_us_tv"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="36dp"
           android:orientation="vertical">


           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/etEmail"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/emailReg"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               app:endIconMode="clear_text"
               app:endIconTint="@color/white"
               app:hintTextColor="@color/white"
               android:textColorHint="@color/gray"
               app:boxStrokeWidthFocused="2dp"
               app:boxStrokeColor="@color/joinUsBlue"
               app:startIconDrawable="@drawable/ic_baseline_mail_24"
               app:startIconTint="@color/white">
               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:inputType="textEmailAddress"
                   android:textColor="@color/white"/>
           </com.google.android.material.textfield.TextInputLayout>
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/etPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/passwordReg"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               app:endIconMode="password_toggle"
               app:endIconTint="@color/white"
               app:hintTextColor="@color/white"
               android:textColorHint="@color/gray"
               app:boxStrokeWidthFocused="2dp"
               app:boxStrokeColor="@color/joinUsBlue"
               app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
               app:startIconTint="@color/white">
               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:inputType="textPassword"
                   android:textColor="@color/white"/>
           </com.google.android.material.textfield.TextInputLayout>
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/etReEnterPasword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/reenter_password"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               app:endIconMode="password_toggle"
               app:endIconTint="@color/white"
               app:hintTextColor="@color/white"
               android:textColorHint="@color/gray"
               app:boxStrokeWidthFocused="2dp"
               app:boxStrokeColor="@color/joinUsBlue"
               app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
               app:startIconTint="@color/white">
               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:inputType="textPassword"
                   android:textColor="@color/white"/>
           </com.google.android.material.textfield.TextInputLayout>


       </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="onClickNext"
            android:layout_marginTop="36dp"
            android:elevation="5dp"
            android:transitionName="transition_next_button"/>
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/sign_inLog"
            android:onClick="onClickLogin"
            android:elevation="5dp"
            android:transitionName="transition_login_button"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>


</ScrollView>