<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.example.admindashboard.loginAndSignUp.VerifyOtpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/code_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="100sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/verification_text"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/muli_light"
            android:text="@string/otp_description"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/muli_light"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <com.chaos.view.PinView
            android:id="@+id/pvOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:itemCount="6"
            app:lineColor="@color/white"
            android:layout_marginTop="30dp"
            style="@style/PinWidget.PinView"
            android:cursorVisible="true"
            android:inputType="number"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"
            app:cursorColor="@color/white"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/verify_code"
            android:onClick="onClickVerifyCode"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</ScrollView>