<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.example.admindashboard.loginAndSignUp.ResetPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginBottom="48dp"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordReg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/gray"
            app:boxStrokeWidthFocused="2dp"
            android:layout_marginBottom="16dp"
            app:boxStrokeColor="@color/joinUsBlue"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
            app:startIconTint="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etReEnterPasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reenter_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/gray"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/joinUsBlue"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
            app:startIconTint="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/reset"
            android:onClick="onClickReset"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</ScrollView>